--- a/configs/debug_diff.yaml
+++ b/configs/debug_diff.yaml
@@ -9,7 +9,7 @@ batch_size: 2
 lr: 0.0001
 epochs: 1
 
-mode: "end2end" # or residual
+mode: "residual" # or end2end
 log_interval: 1
 save_interval: 1
 num_inference_steps: 2
