--- a/configs/debug_diff.yaml
+++ b/configs/debug_diff.yaml
@@ -9,7 +9,10 @@ batch_size: 2
 lr: 0.0001
 epochs: 1
 
-mode: "residual" # or end2end
+mode: "end2end" # or residual
 log_interval: 1
 save_interval: 1
 num_inference_steps: 2
+
+test_seen_list: "data/RoNIN/lists/list_debug.txt"
+test_unseen_list: "data/RoNIN/lists/list_debug.txt"
