test(config): Re-add local overfit config with num_workers=0

--- a/configs/local_overfit.yaml
+++ b/configs/local_overfit.yaml
@@ -1,19 +1,16 @@
-# Local Overfit Config (for Sanity Check)
+# Local Overfit Config (Sanity Check)
 data_dir: "data/RoNIN/extracted"
 train_list: "data/RoNIN/lists/list_debug.txt"
 val_list: "data/RoNIN/lists/list_debug.txt"
 
-# Evaluation Lists
-test_seen_list: "data/RoNIN/lists/list_debug.txt"
-test_unseen_list: "data/RoNIN/lists/list_debug.txt"
-
 window_size: 200
-stride: 10 # Dense stride to get more samples from short sequence
-batch_size: 16
+stride: 10
+batch_size: 4  # Small batch size
 lr: 0.001
 epochs: 50
 
-mode: "end2end" # or "residual"
-log_interval: 5
+mode: "end2end"
+log_interval: 1
 save_interval: 10
-num_inference_steps: 20 # Speed up sampling
+num_inference_steps: 10
+num_workers: 0 # Disable multiprocessing to ensure output visibility
