feat: optimize data loading with parallel processing and update docs
- Implement parallel data loading in utils/data_utils.py using joblib (n_jobs=16) to speed up dataset initialization on large servers.
- Update requirements.txt with missing dependencies (h5py, quaternion, numba, tqdm, joblib).
- Update README.md and README_zh.md with clearer data preparation instructions and download links.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ matplotlib>=3.7.0
 plotly>=5.14.0
 pyyaml>=6.0
 ruff>=0.0.260
+h5py>=3.8.0
+numpy-quaternion>=2022.4.3
+numba>=0.57.0
+tqdm>=4.65.0
+joblib>=1.3.0
