--- a/configs/diffusion_variant_a.yaml
+++ b/configs/diffusion_variant_a.yaml
@@ -1,4 +1,7 @@
+# Diffusion Variant A (Residual/Refinement) Config
 data_dir: "data/RoNIN/extracted/"
+train_list: "data/RoNIN/lists/list_train.txt"
+val_list: "data/RoNIN/lists/list_val.txt"
 test_seen_list: "data/RoNIN/lists/list_test_seen.txt"
 test_unseen_list: "data/RoNIN/lists/list_test_unseen.txt"
 
@@ -12,3 +15,4 @@ mode: "residual"
 log_interval: 10
 save_interval: 10
 target_dim: 2
+num_inference_steps: 50
